[package]
name = "iptables-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["rt", "process", "macros"] }
axum = { version = "0.6", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.171", features = ["derive"] }
clap = { version = "4.3.11", features = ["derive"] }
